src/gp/parser/MiniJavaParser.java
// Generated from MiniJava.g4 by ANTLR 4.9.2
package gp.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniJavaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		PACKAGENAME=60, LONGARRAYNAME=61, LONGNAME=62, BOOLEANNAME=63, BOOLEAN=64, 
		NUMBER=65, COMMENT=66, WS=67;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_declaration = 2, RULE_statement = 3, 
		RULE_expressionNumeric = 4, RULE_expressionBoolean = 5, RULE_longArrayDeclaration = 6, 
		RULE_longArrayValue = 7, RULE_longDeclaration = 8, RULE_booleanDeclaration = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "declaration", "statement", "expressionNumeric", 
			"expressionBoolean", "longArrayDeclaration", "longArrayValue", "longDeclaration", 
			"booleanDeclaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'package'", "';'", "'import'", "'java'", "'.'", "'lang'", "'Exception'", 
			"'util'", "'ArrayList'", "'gp'", "'Util'", "'public'", "'class'", "'GeneticProgram'", 
			"'{'", "'static'", "'void'", "'compute'", "'('", "'<'", "'Long'", "'>'", 
			"')'", "'int'", "'size'", "'='", "'try'", "'catch'", "'e'", "'clear'", 
			"'}'", "'if'", "'else'", "'while'", "'!'", "'Thread'", "'currentThread'", 
			"'isInterrupted'", "'&&'", "'set'", "'valueOf'", "'intValue'", "'%'", 
			"','", "'Boolean'", "'-'", "'&'", "'|'", "'^'", "'*'", "'/'", "'+'", 
			"'f'", "'<='", "'=='", "'!='", "'||'", "'new'", "'get'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"PACKAGENAME", "LONGARRAYNAME", "LONGNAME", "BOOLEANNAME", "BOOLEAN", 
			"NUMBER", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniJava.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniJavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PACKAGENAME() { return getToken(MiniJavaParser.PACKAGENAME, 0); }
		public List<TerminalNode> LONGARRAYNAME() { return getTokens(MiniJavaParser.LONGARRAYNAME); }
		public TerminalNode LONGARRAYNAME(int i) {
			return getToken(MiniJavaParser.LONGARRAYNAME, i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MiniJavaParser.EOF, 0); }
		public List<TerminalNode> COMMENT() { return getTokens(MiniJavaParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(MiniJavaParser.COMMENT, i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT) {
				{
				{
				setState(20);
				match(COMMENT);
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(26);
			match(T__0);
			setState(27);
			match(PACKAGENAME);
			setState(28);
			match(T__1);
			setState(29);
			match(T__2);
			setState(30);
			match(T__3);
			setState(31);
			match(T__4);
			setState(32);
			match(T__5);
			setState(33);
			match(T__4);
			setState(34);
			match(T__6);
			setState(35);
			match(T__1);
			setState(36);
			match(T__2);
			setState(37);
			match(T__3);
			setState(38);
			match(T__4);
			setState(39);
			match(T__7);
			setState(40);
			match(T__4);
			setState(41);
			match(T__8);
			setState(42);
			match(T__1);
			setState(43);
			match(T__2);
			setState(44);
			match(T__9);
			setState(45);
			match(T__4);
			setState(46);
			match(T__10);
			setState(47);
			match(T__1);
			setState(48);
			match(T__11);
			setState(49);
			match(T__12);
			setState(50);
			match(T__13);
			setState(51);
			match(T__14);
			setState(52);
			match(T__11);
			setState(53);
			match(T__15);
			setState(54);
			match(T__16);
			setState(55);
			match(T__17);
			setState(56);
			match(T__18);
			setState(57);
			match(T__8);
			setState(58);
			match(T__19);
			setState(59);
			match(T__20);
			setState(60);
			match(T__21);
			setState(61);
			match(LONGARRAYNAME);
			setState(62);
			match(T__22);
			setState(63);
			match(T__14);
			setState(64);
			match(T__23);
			setState(65);
			match(T__24);
			setState(66);
			match(T__25);
			setState(67);
			match(LONGARRAYNAME);
			setState(68);
			match(T__4);
			setState(69);
			match(T__24);
			setState(70);
			match(T__18);
			setState(71);
			match(T__22);
			setState(72);
			match(T__1);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__20) | (1L << T__44))) != 0)) {
				{
				{
				setState(73);
				declaration();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(T__26);
			setState(80);
			block();
			setState(81);
			match(T__27);
			setState(82);
			match(T__18);
			setState(83);
			match(T__6);
			setState(84);
			match(T__28);
			setState(85);
			match(T__22);
			setState(86);
			match(T__14);
			setState(87);
			match(LONGARRAYNAME);
			setState(88);
			match(T__4);
			setState(89);
			match(T__29);
			setState(90);
			match(T__18);
			setState(91);
			match(T__22);
			setState(92);
			match(T__1);
			setState(93);
			match(T__30);
			setState(94);
			match(T__30);
			setState(95);
			match(T__30);
			setState(96);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__14);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__20) | (1L << T__44))) != 0)) {
				{
				{
				setState(99);
				declaration();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__31) | (1L << T__33) | (1L << LONGARRAYNAME) | (1L << LONGNAME) | (1L << BOOLEANNAME))) != 0)) {
				{
				{
				setState(105);
				statement();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(T__30);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public LongArrayDeclarationContext longArrayDeclaration() {
			return getRuleContext(LongArrayDeclarationContext.class,0);
		}
		public LongDeclarationContext longDeclaration() {
			return getRuleContext(LongDeclarationContext.class,0);
		}
		public BooleanDeclarationContext booleanDeclaration() {
			return getRuleContext(BooleanDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				longArrayDeclaration();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				longDeclaration();
				}
				break;
			case T__44:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				booleanDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ExpressionBooleanContext expressionBoolean() {
			return getRuleContext(ExpressionBooleanContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode LONGARRAYNAME() { return getToken(MiniJavaParser.LONGARRAYNAME, 0); }
		public List<ExpressionNumericContext> expressionNumeric() {
			return getRuleContexts(ExpressionNumericContext.class);
		}
		public ExpressionNumericContext expressionNumeric(int i) {
			return getRuleContext(ExpressionNumericContext.class,i);
		}
		public TerminalNode LONGNAME() { return getToken(MiniJavaParser.LONGNAME, 0); }
		public TerminalNode BOOLEANNAME() { return getToken(MiniJavaParser.BOOLEANNAME, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		int _la;
		try {
			setState(190);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__31:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				match(T__31);
				setState(119);
				match(T__18);
				setState(120);
				expressionBoolean();
				setState(121);
				match(T__22);
				setState(122);
				block();
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__32) {
					{
					setState(123);
					match(T__32);
					setState(124);
					block();
					}
				}

				}
				break;
			case T__33:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				match(T__33);
				setState(128);
				match(T__18);
				setState(129);
				match(T__34);
				setState(130);
				match(T__35);
				setState(131);
				match(T__4);
				setState(132);
				match(T__36);
				setState(133);
				match(T__18);
				setState(134);
				match(T__22);
				setState(135);
				match(T__4);
				setState(136);
				match(T__37);
				setState(137);
				match(T__18);
				setState(138);
				match(T__22);
				setState(139);
				match(T__38);
				setState(140);
				expressionBoolean();
				setState(141);
				match(T__22);
				setState(142);
				block();
				}
				break;
			case LONGARRAYNAME:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				match(LONGARRAYNAME);
				setState(145);
				match(T__4);
				setState(146);
				match(T__39);
				setState(147);
				match(T__18);
				setState(148);
				match(T__20);
				setState(149);
				match(T__4);
				setState(150);
				match(T__40);
				setState(151);
				match(T__18);
				setState(152);
				expressionNumeric();
				setState(153);
				match(T__22);
				setState(154);
				match(T__4);
				setState(155);
				match(T__41);
				setState(156);
				match(T__18);
				setState(157);
				match(T__22);
				setState(158);
				match(T__42);
				setState(159);
				match(T__24);
				setState(160);
				match(T__43);
				setState(161);
				match(T__20);
				setState(162);
				match(T__4);
				setState(163);
				match(T__40);
				setState(164);
				match(T__18);
				setState(165);
				expressionNumeric();
				setState(166);
				match(T__22);
				setState(167);
				match(T__22);
				setState(168);
				match(T__1);
				}
				break;
			case LONGNAME:
				enterOuterAlt(_localctx, 4);
				{
				setState(170);
				match(LONGNAME);
				setState(171);
				match(T__25);
				setState(172);
				match(T__20);
				setState(173);
				match(T__4);
				setState(174);
				match(T__40);
				setState(175);
				match(T__18);
				setState(176);
				expressionNumeric();
				setState(177);
				match(T__22);
				setState(178);
				match(T__1);
				}
				break;
			case BOOLEANNAME:
				enterOuterAlt(_localctx, 5);
				{
				setState(180);
				match(BOOLEANNAME);
				setState(181);
				match(T__25);
				setState(182);
				match(T__44);
				setState(183);
				match(T__4);
				setState(184);
				match(T__40);
				setState(185);
				match(T__18);
				setState(186);
				expressionBoolean();
				setState(187);
				match(T__22);
				setState(188);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionNumericContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(MiniJavaParser.NUMBER, 0); }
		public TerminalNode LONGNAME() { return getToken(MiniJavaParser.LONGNAME, 0); }
		public TerminalNode LONGARRAYNAME() { return getToken(MiniJavaParser.LONGARRAYNAME, 0); }
		public LongArrayValueContext longArrayValue() {
			return getRuleContext(LongArrayValueContext.class,0);
		}
		public List<ExpressionNumericContext> expressionNumeric() {
			return getRuleContexts(ExpressionNumericContext.class);
		}
		public ExpressionNumericContext expressionNumeric(int i) {
			return getRuleContext(ExpressionNumericContext.class,i);
		}
		public ExpressionNumericContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionNumeric; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpressionNumeric(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpressionNumeric(this);
		}
	}

	public final ExpressionNumericContext expressionNumeric() throws RecognitionException {
		ExpressionNumericContext _localctx = new ExpressionNumericContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expressionNumeric);
		try {
			setState(286);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(192);
				match(NUMBER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(193);
				match(LONGNAME);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(194);
				match(LONGARRAYNAME);
				setState(195);
				match(T__4);
				setState(196);
				match(T__24);
				setState(197);
				match(T__18);
				setState(198);
				match(T__22);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(199);
				longArrayValue();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(200);
				match(T__18);
				setState(201);
				match(T__45);
				setState(202);
				expressionNumeric();
				setState(203);
				match(T__22);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(205);
				match(T__18);
				setState(206);
				expressionNumeric();
				setState(207);
				match(T__46);
				setState(208);
				expressionNumeric();
				setState(209);
				match(T__22);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(211);
				match(T__18);
				setState(212);
				expressionNumeric();
				setState(213);
				match(T__47);
				setState(214);
				expressionNumeric();
				setState(215);
				match(T__22);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(217);
				match(T__18);
				setState(218);
				expressionNumeric();
				setState(219);
				match(T__48);
				setState(220);
				expressionNumeric();
				setState(221);
				match(T__22);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(223);
				match(T__18);
				setState(224);
				expressionNumeric();
				setState(225);
				match(T__42);
				setState(226);
				expressionNumeric();
				setState(227);
				match(T__22);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(229);
				match(T__18);
				setState(230);
				expressionNumeric();
				setState(231);
				match(T__49);
				setState(232);
				expressionNumeric();
				setState(233);
				match(T__22);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(235);
				match(T__18);
				setState(236);
				expressionNumeric();
				setState(237);
				match(T__50);
				setState(238);
				expressionNumeric();
				setState(239);
				match(T__22);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(241);
				match(T__18);
				setState(242);
				expressionNumeric();
				setState(243);
				match(T__51);
				setState(244);
				expressionNumeric();
				setState(245);
				match(T__22);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(247);
				match(T__18);
				setState(248);
				expressionNumeric();
				setState(249);
				match(T__45);
				setState(250);
				expressionNumeric();
				setState(251);
				match(T__22);
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(253);
				match(T__10);
				setState(254);
				match(T__4);
				setState(255);
				match(T__52);
				setState(256);
				match(T__18);
				setState(257);
				match(NUMBER);
				setState(258);
				match(T__43);
				setState(259);
				expressionNumeric();
				setState(260);
				match(T__22);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(262);
				match(T__10);
				setState(263);
				match(T__4);
				setState(264);
				match(T__52);
				setState(265);
				match(T__18);
				setState(266);
				match(NUMBER);
				setState(267);
				match(T__43);
				setState(268);
				expressionNumeric();
				setState(269);
				match(T__43);
				setState(270);
				expressionNumeric();
				setState(271);
				match(T__22);
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(273);
				match(T__10);
				setState(274);
				match(T__4);
				setState(275);
				match(T__52);
				setState(276);
				match(T__18);
				setState(277);
				match(NUMBER);
				setState(278);
				match(T__43);
				setState(279);
				expressionNumeric();
				setState(280);
				match(T__43);
				setState(281);
				expressionNumeric();
				setState(282);
				match(T__43);
				setState(283);
				expressionNumeric();
				setState(284);
				match(T__22);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionBooleanContext extends ParserRuleContext {
		public TerminalNode BOOLEAN() { return getToken(MiniJavaParser.BOOLEAN, 0); }
		public TerminalNode BOOLEANNAME() { return getToken(MiniJavaParser.BOOLEANNAME, 0); }
		public List<ExpressionBooleanContext> expressionBoolean() {
			return getRuleContexts(ExpressionBooleanContext.class);
		}
		public ExpressionBooleanContext expressionBoolean(int i) {
			return getRuleContext(ExpressionBooleanContext.class,i);
		}
		public List<ExpressionNumericContext> expressionNumeric() {
			return getRuleContexts(ExpressionNumericContext.class);
		}
		public ExpressionNumericContext expressionNumeric(int i) {
			return getRuleContext(ExpressionNumericContext.class,i);
		}
		public ExpressionBooleanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionBoolean; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterExpressionBoolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitExpressionBoolean(this);
		}
	}
